--- a/app-1/main.less
+++ b/app-1/main.less
@@ -19,9 +19,10 @@ textarea {
     outline: none;
     padding: 0;
     background-color: transparent;
-    line-height: 1;
+    line-height: 0.85;
     font-family: monospace;
     font-size: 25vh;
     font-weight: bold;
     color: inherit;
+    caret-color: transparent;
 }
